--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "author": "Scott Eifel",
     "license": "ISC",
     "devDependencies": {
-        "@parcel/transformer-sass": "^2.0.0-beta.2",
-        "parcel": "^2.0.0-beta.2",
+        "@parcel/transformer-sass": "^2.5.0",
+        "parcel": "^2.5.0",
         "sass": "^1.36.0"
     },
     "dependencies": {
